# failure_data_analysis

./: .gitignore  Dockerfile  jin_tags_ml.txt  pyproject.toml  requirements.txt
database/: big_query_connector.py  big_query_reader.py
scripts/: db_table_creation.sql
src/: main.py
src/analysis/: jin_iter1_analysis.py
src/data/: big_query_connector.py  bk_delay_capa_merged_summary_data.pkl  bk_delay_capa_merged_summary_data_csv.csv  csv_reader.py  may23_capa_dates_fixed.csv  may23_capa_delay_match_189.csv  may23_delay_dates_fixed.csv  pickle_file_reader.py  postgres_connector.py  tbtwc_cobble_data_2024.pkl
src/data/jin_fm_grp_data/: 0_sum.txt  1_sum.txt  2_sum.txt  drive_sys_subgroups.pkl  high_pressure_subgroups.pkl  position_gap_subgroups.pkl
src/database/: bigquery_reader.py  postgres_reader.py  postgres_writer.py
src/ext_pipe/: proc_filtered_jin_cob_data.py  triage_jinal_cobble_history.py
src/llms/: gemini_wrapper.py  goog_gemini.py
src/llms/prompts/: jin_capa_data_prompt.py  jin_triage_delay_only.py  jin_triage_tags_extraction.py  master_ops_describe.txt
src/proc_pipe/: gr_handlers.py
tests/: gr_db_triage_data.py  gr_doc_ext.py  gr_ext_fmea.py  gr_multi_pages.py  gr_test.py  test_bigquery_connection.py  test_data_loading.py  test_jin_iter1_analysis.py  test_jin_triage_pipe.py
tmp_app/: gr_ingest_demo.py  gr_pg1_ingest.py  gr_pg2_fail_events.py  gr_pg3_fail_stats.py  jin_shell_demo_prompt.py
